# diff-rs

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: clippy.yml
src/: file.rs  main.rs  parser.rs  printer.rs
src/parser/: mod.rs  raw_parser.rs
test/: printer.rs
test/resources/: diff.patch  diff2.patch  script.sh  script.sh.old
