[package]
name = "diff_rs"
version = "0.1.0"
authors = ["Miguel Berrio <me@miguelberrio.xyz>", "Dimitrij Vogt <divogt@dima23.de>"]
description = "A more beautiful and readable diff output."
repository = ""
documentation = ""
readme = "README.md"
categories = ["text-processing", "development-tools::testing"]
keywords = ["diff", "text", "compare", "changes", "assert", "git", "git-diff"]
license = "MIT"

[dependencies]
term_size = "0.3.*"
ansi_term = "0.11"
clap = "2.*"
regex = "1"
nom = "^4.2"

[[bin]]
name = "diff_rs"
doc = false
